# automated_indoor_garden

./: CMakeLists.txt  README.md  watering_system.c
